java-15-migration updated pom